parser.output
Terminals unused in grammar

   VOID_KEYWORD
   ARRAY_KEYWORD
   RIGHT_ARROW
   DOLLAR


Grammar

    0 $accept: program $end

    1 program: blocks

    2 blocks: blocks block
    3       | block

    4 block: line
    5      | EOL
    6      | COMMENT

    7 line: end_line end
    8     | if_block
    9     | single_expression
   10     | loop_block
   11     | function_definition
   12     | CURA blocks CURB

   13 function_definition: FUNCTION_KEYWORD ID PARA function_parameters PARB code_block
   14                    | FUNCTION_KEYWORD ID PARA function_parameters PARB ASSIGNMENT single_expression

   15 function_parameters: parameters
   16                    | %empty

   17 parameters: parameters COMMA ID
   18           | ID

   19 code_block: line
   20           | EOL code_block
   21           | code_block EOL

   22 end_line: RETURN_KEYWORD expression
   23         | RETURN_KEYWORD
   24         | BREAK_KEYWORD
   25         | CONTINUE_KEYWORD

   26 if_block: IF_KEYWORD PARA expression PARB code_block
   27         | IF_KEYWORD PARA expression PARB code_block ELSE_KEYWORD code_block

   28 loop_block: for_block
   29           | foreach_block
   30           | while_block

   31 for_block: FOR_KEYWORD PARA nullable_expression SEMICOLON nullable_expression SEMICOLON nullable_expression PARB code_block
   32          | FOR_KEYWORD PARA nullable_expression SEMICOLON nullable_expression SEMICOLON nullable_expression PARB code_block ELSE_KEYWORD code_block
   33          | FOR_KEYWORD PARA VAR_KEYWORD ID IN_KEYWORD expression COLON expression PARB code_block
   34          | FOR_KEYWORD PARA VAR_KEYWORD ID IN_KEYWORD expression COLON expression PARB code_block ELSE_KEYWORD code_block

   35 foreach_block: FOREACH_KEYWORD PARA VAR_KEYWORD ID IN_KEYWORD expression PARB code_block
   36              | FOREACH_KEYWORD PARA VAR_KEYWORD ID IN_KEYWORD expression PARB code_block ELSE_KEYWORD code_block
   37              | FOREACH_KEYWORD PARA VAR_KEYWORD ID COMMA ID IN_KEYWORD expression PARB code_block
   38              | FOREACH_KEYWORD PARA VAR_KEYWORD ID COMMA ID IN_KEYWORD expression PARB code_block ELSE_KEYWORD code_block

   39 while_block: WHILE_KEYWORD PARA nullable_expression PARB code_block
   40            | WHILE_KEYWORD PARA nullable_expression PARB code_block ELSE_KEYWORD code_block

   41 assignment: ID ASSIGNMENT expression
   42           | ID BRAA expression BRAB ASSIGNMENT expression
   43           | ID BRAA BRAB ASSIGNMENT expression

   44 single_expression: expression end

   45 nullable_expression: expression
   46                    | %empty

   47 expression: MINUS expression
   48           | expression PLUS expression
   49           | expression MINUS expression
   50           | expression ASTERISK expression
   51           | expression SLASH expression
   52           | expression PERCENT expression
   53           | expression DOUBLEASTERISK expression
   54           | expression EQUAL expression
   55           | expression NOTEQUAL expression
   56           | expression MORE expression
   57           | expression LESS expression
   58           | expression MEQ expression
   59           | expression LEQ expression
   60           | expression AND_KEYWORD expression
   61           | expression OR_KEYWORD expression
   62           | EXCLAMATION expression
   63           | INTEGER
   64           | FLOAT
   65           | STRING_LITERAL
   66           | ID BRAA expression BRAB
   67           | function_call
   68           | PARA expression PARB
   69           | ID
   70           | variable_definition
   71           | assignment

   72 variable_definition: VAR_KEYWORD variable_definition_list

   73 variable_definition_list: single_variable_definition
   74                         | variable_definition_list COMMA single_variable_definition

   75 single_variable_definition: ID ASSIGNMENT expression
   76                           | ID

   77 function_call: ID PARA arguments PARB

   78 arguments: arguments COMMA expression
   79          | expression
   80          | %empty

   81 end: EOL
   82    | COMMENT
   83    | SEMICOLON
   84    | EOF_


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING_LITERAL (258) 65
IF_KEYWORD (259) 26 27
ELSE_KEYWORD (260) 27 32 34 36 38 40
FUNCTION_KEYWORD (261) 13 14
VOID_KEYWORD (262)
RETURN_KEYWORD (263) 22 23
AND_KEYWORD (264) 60
OR_KEYWORD (265) 61
WHILE_KEYWORD (266) 39 40
FOR_KEYWORD (267) 31 32 33 34
FOREACH_KEYWORD (268) 35 36 37 38
IN_KEYWORD (269) 33 34 35 36 37 38
BREAK_KEYWORD (270) 24
CONTINUE_KEYWORD (271) 25
VAR_KEYWORD (272) 33 34 35 36 37 38 72
ARRAY_KEYWORD (273)
RIGHT_ARROW (274)
ASSIGNMENT (275) 14 41 42 43 75
PLUS (276) 48
MINUS (277) 47 49
ASTERISK (278) 50
DOUBLEASTERISK (279) 53
SLASH (280) 51
COMMA (281) 17 37 38 74 78
COLON (282) 33 34
SEMICOLON (283) 31 32 83
DOLLAR (284)
LEQ (285) 59
MEQ (286) 58
LESS (287) 57
MORE (288) 56
EQUAL (289) 54
NOTEQUAL (290) 55
PARA (291) 13 14 26 27 31 32 33 34 35 36 37 38 39 40 68 77
PARB (292) 13 14 26 27 31 32 33 34 35 36 37 38 39 40 68 77
BRAA (293) 42 43 66
BRAB (294) 42 43 66
CURA (295) 12
CURB (296) 12
FLOAT (297) 64
INTEGER (298) 63
ID (299) 13 14 17 18 33 34 35 36 37 38 41 42 43 66 69 75 76 77
EOL (300) 5 20 21 81
EOF_ (301) 84
EXCLAMATION (302) 62
PERCENT (303) 52
COMMENT (304) 6 82
NEGATION (305)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
blocks (53)
    on left: 2 3, on right: 1 2 12
block (54)
    on left: 4 5 6, on right: 2 3
line (55)
    on left: 7 8 9 10 11 12, on right: 4 19
function_definition (56)
    on left: 13 14, on right: 11
function_parameters (57)
    on left: 15 16, on right: 13 14
parameters (58)
    on left: 17 18, on right: 15 17
code_block (59)
    on left: 19 20 21, on right: 13 20 21 26 27 31 32 33 34 35 36 37
    38 39 40
end_line (60)
    on left: 22 23 24 25, on right: 7
if_block (61)
    on left: 26 27, on right: 8
loop_block (62)
    on left: 28 29 30, on right: 10
for_block (63)
    on left: 31 32 33 34, on right: 28
foreach_block (64)
    on left: 35 36 37 38, on right: 29
while_block (65)
    on left: 39 40, on right: 30
assignment (66)
    on left: 41 42 43, on right: 71
single_expression (67)
    on left: 44, on right: 9 14
nullable_expression (68)
    on left: 45 46, on right: 31 32 39 40
expression (69)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69 70 71, on right: 22 26 27 33 34 35 36 37 38 41 42
    43 44 45 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 66 68
    75 78 79
variable_definition (70)
    on left: 72, on right: 70
variable_definition_list (71)
    on left: 73 74, on right: 72 74
single_variable_definition (72)
    on left: 75 76, on right: 73 74
function_call (73)
    on left: 77, on right: 67
arguments (74)
    on left: 78 79 80, on right: 77 78
end (75)
    on left: 81 82 83 84, on right: 7 44


State 0

    0 $accept: . program $end

    STRING_LITERAL    shift, and go to state 1
    IF_KEYWORD        shift, and go to state 2
    FUNCTION_KEYWORD  shift, and go to state 3
    RETURN_KEYWORD    shift, and go to state 4
    WHILE_KEYWORD     shift, and go to state 5
    FOR_KEYWORD       shift, and go to state 6
    FOREACH_KEYWORD   shift, and go to state 7
    BREAK_KEYWORD     shift, and go to state 8
    CONTINUE_KEYWORD  shift, and go to state 9
    VAR_KEYWORD       shift, and go to state 10
    MINUS             shift, and go to state 11
    PARA              shift, and go to state 12
    CURA              shift, and go to state 13
    FLOAT             shift, and go to state 14
    INTEGER           shift, and go to state 15
    ID                shift, and go to state 16
    EOL               shift, and go to state 17
    EXCLAMATION       shift, and go to state 18
    COMMENT           shift, and go to state 19

    program              go to state 20
    blocks               go to state 21
    block                go to state 22
    line                 go to state 23
    function_definition  go to state 24
    end_line             go to state 25
    if_block             go to state 26
    loop_block           go to state 27
    for_block            go to state 28
    foreach_block        go to state 29
    while_block          go to state 30
    assignment           go to state 31
    single_expression    go to state 32
    expression           go to state 33
    variable_definition  go to state 34
    function_call        go to state 35


State 1

   65 expression: STRING_LITERAL .

    $default  reduce using rule 65 (expression)


State 2

   26 if_block: IF_KEYWORD . PARA expression PARB code_block
   27         | IF_KEYWORD . PARA expression PARB code_block ELSE_KEYWORD code_block

    PARA  shift, and go to state 36


State 3

   13 function_definition: FUNCTION_KEYWORD . ID PARA function_parameters PARB code_block
   14                    | FUNCTION_KEYWORD . ID PARA function_parameters PARB ASSIGNMENT single_expression

    ID  shift, and go to state 37


State 4

   22 end_line: RETURN_KEYWORD . expression
   23         | RETURN_KEYWORD .

    STRING_LITERAL  shift, and go to state 1
    VAR_KEYWORD     shift, and go to state 10
    MINUS           shift, and go to state 11
    PARA            shift, and go to state 12
    FLOAT           shift, and go to state 14
    INTEGER         shift, and go to state 15
    ID              shift, and go to state 16
    EXCLAMATION     shift, and go to state 18

    $default  reduce using rule 23 (end_line)

    assignment           go to state 31
    expression           go to state 38
    variable_definition  go to state 34
    function_call        go to state 35


State 5

   39 while_block: WHILE_KEYWORD . PARA nullable_expression PARB code_block
   40            | WHILE_KEYWORD . PARA nullable_expression PARB code_block ELSE_KEYWORD code_block

    PARA  shift, and go to state 39


State 6

   31 for_block: FOR_KEYWORD . PARA nullable_expression SEMICOLON nullable_expression SEMICOLON nullable_expression PARB code_block
   32          | FOR_KEYWORD . PARA nullable_expression SEMICOLON nullable_expression SEMICOLON nullable_expression PARB code_block ELSE_KEYWORD code_block
   33          | FOR_KEYWORD . PARA VAR_KEYWORD ID IN_KEYWORD expression COLON expression PARB code_block
   34          | FOR_KEYWORD . PARA VAR_KEYWORD ID IN_KEYWORD expression COLON expression PARB code_block ELSE_KEYWORD code_block

    PARA  shift, and go to state 40


State 7

   35 foreach_block: FOREACH_KEYWORD . PARA VAR_KEYWORD ID IN_KEYWORD expression PARB code_block
   36              | FOREACH_KEYWORD . PARA VAR_KEYWORD ID IN_KEYWORD expression PARB code_block ELSE_KEYWORD code_block
   37              | FOREACH_KEYWORD . PARA VAR_KEYWORD ID COMMA ID IN_KEYWORD expression PARB code_block
   38              | FOREACH_KEYWORD . PARA VAR_KEYWORD ID COMMA ID IN_KEYWORD expression PARB code_block ELSE_KEYWORD code_block

    PARA  shift, and go to state 41


State 8

   24 end_line: BREAK_KEYWORD .

    $default  reduce using rule 24 (end_line)


State 9

   25 end_line: CONTINUE_KEYWORD .

    $default  reduce using rule 25 (end_line)


State 10

   72 variable_definition: VAR_KEYWORD . variable_definition_list

    ID  shift, and go to state 42

    variable_definition_list    go to state 43
    single_variable_definition  go to state 44


State 11

   47 expression: MINUS . expression

    STRING_LITERAL  shift, and go to state 1
    VAR_KEYWORD     shift, and go to state 10
    MINUS           shift, and go to state 11
    PARA            shift, and go to state 12
    FLOAT           shift, and go to state 14
    INTEGER         shift, and go to state 15
    ID              shift, and go to state 16
    EXCLAMATION     shift, and go to state 18

    assignment           go to state 31
    expression           go to state 45
    variable_definition  go to state 34
    function_call        go to state 35


State 12

   68 expression: PARA . expression PARB

    STRING_LITERAL  shift, and go to state 1
    VAR_KEYWORD     shift, and go to state 10
    MINUS           shift, and go to state 11
    PARA            shift, and go to state 12
    FLOAT           shift, and go to state 14
    INTEGER         shift, and go to state 15
    ID              shift, and go to state 16
    EXCLAMATION     shift, and go to state 18

    assignment           go to state 31
    expression           go to state 46
    variable_definition  go to state 34
    function_call        go to state 35


State 13

   12 line: CURA . blocks CURB

    STRING_LITERAL    shift, and go to state 1
    IF_KEYWORD        shift, and go to state 2
    FUNCTION_KEYWORD  shift, and go to state 3
    RETURN_KEYWORD    shift, and go to state 4
    WHILE_KEYWORD     shift, and go to state 5
    FOR_KEYWORD       shift, and go to state 6
    FOREACH_KEYWORD   shift, and go to state 7
    BREAK_KEYWORD     shift, and go to state 8
    CONTINUE_KEYWORD  shift, and go to state 9
    VAR_KEYWORD       shift, and go to state 10
    MINUS             shift, and go to state 11
    PARA              shift, and go to state 12
    CURA              shift, and go to state 13
    FLOAT             shift, and go to state 14
    INTEGER           shift, and go to state 15
    ID                shift, and go to state 16
    EOL               shift, and go to state 17
    EXCLAMATION       shift, and go to state 18
    COMMENT           shift, and go to state 19

    blocks               go to state 47
    block                go to state 22
    line                 go to state 23
    function_definition  go to state 24
    end_line             go to state 25
    if_block             go to state 26
    loop_block           go to state 27
    for_block            go to state 28
    foreach_block        go to state 29
    while_block          go to state 30
    assignment           go to state 31
    single_expression    go to state 32
    expression           go to state 33
    variable_definition  go to state 34
    function_call        go to state 35


State 14

   64 expression: FLOAT .

    $default  reduce using rule 64 (expression)


State 15

   63 expression: INTEGER .

    $default  reduce using rule 63 (expression)


State 16

   41 assignment: ID . ASSIGNMENT expression
   42           | ID . BRAA expression BRAB ASSIGNMENT expression
   43           | ID . BRAA BRAB ASSIGNMENT expression
   66 expression: ID . BRAA expression BRAB
   69           | ID .
   77 function_call: ID . PARA arguments PARB

    ASSIGNMENT  shift, and go to state 48
    PARA        shift, and go to state 49
    BRAA        shift, and go to state 50

    $default  reduce using rule 69 (expression)


State 17

    5 block: EOL .

    $default  reduce using rule 5 (block)


State 18

   62 expression: EXCLAMATION . expression

    STRING_LITERAL  shift, and go to state 1
    VAR_KEYWORD     shift, and go to state 10
    MINUS           shift, and go to state 11
    PARA            shift, and go to state 12
    FLOAT           shift, and go to state 14
    INTEGER         shift, and go to state 15
    ID              shift, and go to state 16
    EXCLAMATION     shift, and go to state 18

    assignment           go to state 31
    expression           go to state 51
    variable_definition  go to state 34
    function_call        go to state 35


State 19

    6 block: COMMENT .

    $default  reduce using rule 6 (block)


State 20

    0 $accept: program . $end

    $end  shift, and go to state 52


State 21

    1 program: blocks .
    2 blocks: blocks . block

    STRING_LITERAL    shift, and go to state 1
    IF_KEYWORD        shift, and go to state 2
    FUNCTION_KEYWORD  shift, and go to state 3
    RETURN_KEYWORD    shift, and go to state 4
    WHILE_KEYWORD     shift, and go to state 5
    FOR_KEYWORD       shift, and go to state 6
    FOREACH_KEYWORD   shift, and go to state 7
    BREAK_KEYWORD     shift, and go to state 8
    CONTINUE_KEYWORD  shift, and go to state 9
    VAR_KEYWORD       shift, and go to state 10
    MINUS             shift, and go to state 11
    PARA              shift, and go to state 12
    CURA              shift, and go to state 13
    FLOAT             shift, and go to state 14
    INTEGER           shift, and go to state 15
    ID                shift, and go to state 16
    EOL               shift, and go to state 17
    EXCLAMATION       shift, and go to state 18
    COMMENT           shift, and go to state 19

    $default  reduce using rule 1 (program)

    block                go to state 53
    line                 go to state 23
    function_definition  go to state 24
    end_line             go to state 25
    if_block             go to state 26
    loop_block           go to state 27
    for_block            go to state 28
    foreach_block        go to state 29
    while_block          go to state 30
    assignment           go to state 31
    single_expression    go to state 32
    expression           go to state 33
    variable_definition  go to state 34
    function_call        go to state 35


State 22

    3 blocks: block .

    $default  reduce using rule 3 (blocks)


State 23

    4 block: line .

    $default  reduce using rule 4 (block)


State 24

   11 line: function_definition .

    $default  reduce using rule 11 (line)


State 25

    7 line: end_line . end

    SEMICOLON  shift, and go to state 54
    EOL        shift, and go to state 55
    EOF_       shift, and go to state 56
    COMMENT    shift, and go to state 57

    end  go to state 58


State 26

    8 line: if_block .

    $default  reduce using rule 8 (line)


State 27

   10 line: loop_block .

    $default  reduce using rule 10 (line)


State 28

   28 loop_block: for_block .

    $default  reduce using rule 28 (loop_block)


State 29

   29 loop_block: foreach_block .

    $default  reduce using rule 29 (loop_block)


State 30

   30 loop_block: while_block .

    $default  reduce using rule 30 (loop_block)


State 31

   71 expression: assignment .

    $default  reduce using rule 71 (expression)


State 32

    9 line: single_expression .

    $default  reduce using rule 9 (line)


State 33

   44 single_expression: expression . end
   48 expression: expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . ASTERISK expression
   51           | expression . SLASH expression
   52           | expression . PERCENT expression
   53           | expression . DOUBLEASTERISK expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . MORE expression
   57           | expression . LESS expression
   58           | expression . MEQ expression
   59           | expression . LEQ expression
   60           | expression . AND_KEYWORD expression
   61           | expression . OR_KEYWORD expression

    AND_KEYWORD     shift, and go to state 59
    OR_KEYWORD      shift, and go to state 60
    PLUS            shift, and go to state 61
    MINUS           shift, and go to state 62
    ASTERISK        shift, and go to state 63
    DOUBLEASTERISK  shift, and go to state 64
    SLASH           shift, and go to state 65
    SEMICOLON       shift, and go to state 54
    LEQ             shift, and go to state 66
    MEQ             shift, and go to state 67
    LESS            shift, and go to state 68
    MORE            shift, and go to state 69
    EQUAL           shift, and go to state 70
    NOTEQUAL        shift, and go to state 71
    EOL             shift, and go to state 55
    EOF_            shift, and go to state 56
    PERCENT         shift, and go to state 72
    COMMENT         shift, and go to state 57

    end  go to state 73


State 34

   70 expression: variable_definition .

    $default  reduce using rule 70 (expression)


State 35

   67 expression: function_call .

    $default  reduce using rule 67 (expression)


State 36

   26 if_block: IF_KEYWORD PARA . expression PARB code_block
   27         | IF_KEYWORD PARA . expression PARB code_block ELSE_KEYWORD code_block

    STRING_LITERAL  shift, and go to state 1
    VAR_KEYWORD     shift, and go to state 10
    MINUS           shift, and go to state 11
    PARA            shift, and go to state 12
    FLOAT           shift, and go to state 14
    INTEGER         shift, and go to state 15
    ID              shift, and go to state 16
    EXCLAMATION     shift, and go to state 18

    assignment           go to state 31
    expression           go to state 74
    variable_definition  go to state 34
    function_call        go to state 35


State 37

   13 function_definition: FUNCTION_KEYWORD ID . PARA function_parameters PARB code_block
   14                    | FUNCTION_KEYWORD ID . PARA function_parameters PARB ASSIGNMENT single_expression

    PARA  shift, and go to state 75


State 38

   22 end_line: RETURN_KEYWORD expression .
   48 expression: expression . PLUS expression
   49           | expression . MINUS expression
   50           | expression . ASTERISK expression
   51           | expression . SLASH expression
   52           | expression . PERCENT expression
   53           | expression . DOUBLEASTERISK expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . MORE expression
   57           | expression . LESS expression
   58           | expression . MEQ expression
   59           | expression . LEQ expression
   60           | expression . AND_KEYWORD expression
   61           | expression . OR_KEYWORD expression

    AND_KEYWORD     shift, and go to state 59
    OR_KEYWORD      shift, and go to state 60
    PLUS            shift, and go to state 61
    MINUS           shift, and go to state 62
    ASTERISK        shift, and go to state 63
    DOUBLEASTERISK  shift, and go to state 64
    SLASH           shift, and go to state 65
    LEQ             shift, and go to state 66
    MEQ             shift, and go to state 67
    LESS            shift, and go to state 68
    MORE            shift, and go to state 69
    EQUAL           shift, and go to state 70
    NOTEQUAL        shift, and go to state 71
    PERCENT         shift, and go to state 72

    $default  reduce using rule 22 (end_line)


State 39

   39 while_block: WHILE_KEYWORD PARA . nullable_expression PARB code_block
   40            | WHILE_KEYWORD PARA . nullable_expression PARB code_block ELSE_KEYWORD code_block

    STRING_LITERAL  shift, and go to state 1
    VAR_KEYWORD     shift, and go to state 10
    MINUS           shift, and go to state 11
    PARA            shift, and go to state 12
    FLOAT           shift, and go to state 14
    INTEGER         shift, and go to state 15
    ID              shift, and go to state 16
    EXCLAMATION     shift, and go to state 18

    $default  reduce using rule 46 (nullable_expression)

    assignment           go to state 31
    nullable_expression  go to state 76
    expression           go to state 77
    variable_definition  go to state 34
    function_call        go to state 35


State 40

   31 for_block: FOR_KEYWORD PARA . nullable_expression SEMICOLON nullable_expression SEMICOLON nullable_expression PARB code_block
   32          | FOR_KEYWORD PARA . nullable_expression SEMICOLON nullable_expression SEMICOLON nullable_expression PARB code_block ELSE_KEYWORD code_block
   33          | FOR_KEYWORD PARA . VAR_KEYWORD ID IN_KEYWORD expression COLON expression PARB code_block
   34          | FOR_KEYWORD PARA . VAR_KEYWORD ID IN_KEYWORD expression COLON expression PARB code_block ELSE_KEYWORD code_block

    STRING_LITERAL  shift, and go to state 1
    VAR_KEYWORD     shift, and go to state 78
    MINUS           shift, and go to state 11
    PARA            shift, and go to state 12
    FLOAT           shift, and go to state 14
    INTEGER         shift, and go to state 15
    ID              shift, and go to state 16
    EXCLAMATION     shift, and go to state 18

    $default  reduce using rule 46 (nullable_expression)

    assignment           go to state 31
    nullable_expression  go to state 79
    expression           go to state 77
    variable_definition  go to state 34
    function_call        go to state 35


State 41

   35 foreach_block: FOREACH_KEYWORD PARA . VAR_KEYWORD ID IN_KEYWORD expression PARB code_block
   36              | FOREACH_KEYWORD PARA . VAR_KEYWORD ID IN_KEYWORD expression PARB code_block ELSE_KEYWORD code_block
   37              | FOREACH_KEYWORD PARA . VAR_KEYWORD ID COMMA ID IN_KEYWORD expression PARB code_block
   38              | FOREACH_KEYWORD PARA . VAR_KEYWORD ID COMMA ID IN_KEYWORD expression PARB code_block ELSE_KEYWORD code_block

    VAR_KEYWORD  shift, and go to state 80


State 42

   75 single_variable_definition: ID . ASSIGNMENT expression
